<resources>
    <string name="app_name">Health Companion</string>
    <string name="welcomeText">Welcome to Health Companion</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gender">Gender:</string>
    <string name="light_activity_lifestyle">Light Activity Lifestyle</string>
    <string name="moderate_activity_lifestyle">Moderate Activity Lifestyle</string>
    <string name="vigorous_activity_lifestyle">Vigorous Activity Lifestyle</string>
    <string name="custom_activity_level">Custom Activity Lifestyle</string>
    <string-array name="activityLevels">
        <item></item>
        <item>@string/light_activity_lifestyle</item>
        <item>@string/moderate_activity_lifestyle</item>
        <item>@string/vigorous_activity_lifestyle</item>
        <item></item>
    </string-array>
    <string-array name="activityLevelsWithCustom">
        <item />
        <item>@string/light_activity_lifestyle</item>
        <item>@string/moderate_activity_lifestyle</item>
        <item>@string/vigorous_activity_lifestyle</item>
        <item>@string/custom_activity_level</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string-array name="defeceitOptions">
        <item></item>
        <item>Lose weight slowly</item>
        <item>Lose weight moderately</item>
        <item>Lose weight quickly</item>
    </string-array>
    <string-array name="surplusOptions">
        <item></item>
        <item>Gain weight slowly</item>
        <item>Gain weight moderately</item>
        <item>Gain weight quickly</item>
    </string-array>
    <string name="main_header">Health Companion</string>
    <string name="home_text">Home</string>
    <string name="reminder_button">REMINDERS</string>
    <string name="reminder_header">REMINDERS</string>
    <string name="home_header">HOME</string>
    <string name="records_header">RECORDS</string>
    <string name="dashboard_header">DASHBOARD</string>
    <string name="diet_plans_header">DIET PLANS</string>
    <string name="diet_planner_header">DIET PLANNER</string>
    <string name="breakfast_header"><b><u>BREAKFAST</u></b></string>
    <string name="lunch_header"><b><u>LUNCH</u></b></string>
    <string name="dinner_header"><b><u>DINNER</u></b></string>
    <string name="snacks_header"><b><u>SNACKS</u></b></string>
    <string name="profile_header">PROFILE</string>
    <string name="help_header">HELP</string>
    <string name="healthcompanion_drawertitle">Health Companion</string>
    <string name="medication_button">MEDICATION</string>
    <string name="food_button">FOOD</string>
    <string name="water_button">WATER</string>
    <string name="medication_msg">MEDICATION</string>
    <string name="food_msg">FOOD</string>
    <string name="water_msg">WATER</string>
    <string name="no_food_reminder">You don\'t have any food reminders at the moment</string>
    <string name="no_medi_reminder">You don\'t have any medication reminders at the moment</string>
    <string name="no_watr_reminder">You don\'t have any water reminders at the moment</string>
    <string name="profile_navdrawer">Profile</string>
    <string name="home_navdrawer">Home</string>
    <string name="dashboard_navdrawer">Dashboard</string>
    <string name="records_navdrawer">Records</string>
    <string name="dietplans_navdrawer">Diet Plans</string>
    <string name="recipes_navdrawer">Recipes</string>
    <string name="reminders_navdrawer">Reminders</string>
    <string name="social_navdrawer">Social</string>
    <string name="logout_navdrawer">Logout</string>
    <string name="help_navdrawer">Help</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="reset">Reset</string>
    <string name="reset_all">Reset All</string>
    <string name="bmi">BMI</string>
    <string name="tdee">TDEE</string>
    <string name="pal">PAL</string>
    <string name="edit">Edit</string>
    <string name="discard">Discard</string>
    <string name="save">Save</string>
    <string name="previous">Previous</string>
    <string name="done">Done</string>
    <string name="activityLevelQ">What is your physical activity level?</string>
    <string name="in_cm">in cm</string>
    <string name="height">Height</string>
    <string name="in_kg">in Kg</string>
    <string name="weight">Weight</string>
    <string name="next">Next</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="edit_profile_picture">Edit Profile Picture</string>
    <string name="no_connection">No connection</string>
    <string name="tap_to_retry">Tap to retry</string>
    <string name="backslash">/</string>
    <string name="questionMarks">_???</string>
    <string name="serving">serving</string>
    <string name="serving_to_grams">1 Serving(??? grams)</string>
    <string name="cancel">cancel</string>
    <string name="select">Select</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="add_food">Add Food</string>
    <string name="helpheader"> <b>Message from Team Health Companion: </b> \n\n
    <i>Dear user, \n\nWe the team at Health Companion, understand that all users might not be familiar with the concept of the app nor its functioning. \n\nIn our endeavour to publish this app; we would like to try our best to ensure that it is utilized for its intended functionality and that its features may provide you with the utility it was designed for. \n\nThis section of the app, which answers frequently asked questions; is for you. May it provide you the understanding and tools, to make your journey to a healthier lifestyle, a much easier one! </i></string>
</resources>