<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoResultFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView_resetAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/reset_all"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/editTextNumber_BMI"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/edit"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/editTextNumber_BMI"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_BMI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bmi"
                app:layout_constraintBottom_toBottomOf="@+id/editTextNumber_BMI"
                app:layout_constraintStart_toStartOf="@+id/textView_TDEE"
                app:layout_constraintTop_toTopOf="@+id/editTextNumber_BMI" />

            <EditText
                android:id="@+id/editTextNumber_BMI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/bmi"
                android:inputType="none"
                app:layout_constraintBottom_toTopOf="@+id/editTextNumber_TDEE"
                app:layout_constraintEnd_toEndOf="@+id/editTextNumber_TDEE"
                app:layout_constraintStart_toStartOf="@+id/editTextNumber_TDEE"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.19"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/textView_resetBMI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/reset"
                app:layout_constraintEnd_toEndOf="@+id/editTextNumber_BMI"
                app:layout_constraintTop_toBottomOf="@+id/editTextNumber_BMI" />

            <TextView
                android:id="@+id/textView_TDEE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/tdee"
                android:inputType="none"
                app:layout_constraintBottom_toBottomOf="@+id/editTextNumber_TDEE"
                app:layout_constraintStart_toStartOf="@+id/textView_PAL"
                app:layout_constraintTop_toTopOf="@+id/editTextNumber_TDEE" />

            <EditText
                android:id="@+id/editTextNumber_TDEE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:ems="10"
                android:hint="@string/tdee"
                android:inputType="numberDecimal"
                app:layout_constraintBottom_toTopOf="@+id/editTextNumber_PAL"
                app:layout_constraintEnd_toEndOf="@+id/editTextNumber_PAL"
                app:layout_constraintStart_toStartOf="@+id/editTextNumber_PAL"
                app:layout_constraintTop_toBottomOf="@+id/editTextNumber_BMI" />

            <TextView
                android:id="@+id/textView_resetTDEE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/reset"
                app:layout_constraintEnd_toEndOf="@+id/editTextNumber_TDEE"
                app:layout_constraintTop_toBottomOf="@+id/editTextNumber_TDEE" />

            <TextView
                android:id="@+id/textView_PAL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pal"
                app:layout_constraintBottom_toBottomOf="@+id/editTextNumber_PAL"
                app:layout_constraintEnd_toStartOf="@+id/editTextNumber_PAL"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editTextNumber_PAL" />

            <EditText
                android:id="@+id/editTextNumber_PAL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/pal"
                android:inputType="none"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView_PAL"
                app:layout_constraintTop_toBottomOf="@+id/editTextNumber_TDEE" />

            <TextView
                android:id="@+id/textView_resetPAL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/reset"
                app:layout_constraintEnd_toEndOf="@+id/editTextNumber_PAL"
                app:layout_constraintTop_toBottomOf="@+id/editTextNumber_PAL" />

            <Button
                android:id="@+id/button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/button_discard"
                app:layout_constraintEnd_toEndOf="@+id/textView_resetPAL"
                app:layout_constraintStart_toEndOf="@+id/button_discard"
                app:layout_constraintTop_toTopOf="@+id/button_discard" />

            <Button
                android:id="@+id/button_discard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/discard"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_save"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_resetPAL"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>